src/objects/icrt__Guide_Milestone__c.object
<CustomObject>
    <fields>
        <fullName>icrt__Guide_Execution__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Guide Execution</label>
        <referenceTo>icrt__Guide_Execution__c</referenceTo>
        <relationshipLabel>Guide Milestones</relationshipLabel>
        <relationshipName>Guide_Milestones</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>icrt__Run_On_ID__c</fullName>
        <label>Run On ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>icrt__Run_On_Name__c</fullName>
        <label>Run On Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>icrt__Run_On_Type__c</fullName>
        <label>Run On Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>icrt__Run_On__c</fullName>
        <formula>HYPERLINK(icrt__Run_On_ID__c, icrt__Run_On_Name__c, &apos;_self&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Run On</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>icrt__Time__c</fullName>
        <label>Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>icrt__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Guide_Milestones</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Guide Milestone</label>
    <nameField>
        <label>Milestone</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Guide Milestones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>